--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <div class="slider-container">
     <div class="slides">
         <!-- 20+ Image Slides (with your image) -->
-        <div class="slide"><img src="Image/iran.jpg" alt="Image 1"></div>
+        <div class="slide"><img src="Image/1744196121756.jpg" alt="Image 1"></div>
         <div class="slide"><img src="https://via.placeholder.com/1200x600/7f7fff/333333?text=Photography+Image+2" alt="Image 2"></div>
         <div class="slide"><img src="https://via.placeholder.com/1200x600/7fff7f/333333?text=Photography+Image+3" alt="Image 3"></div>
         <div class="slide"><img src="https://via.placeholder.com/1200x600/ff7fff/333333?text=Photography+Image+4" alt="Image 4"></div>
