--- a/index.html
+++ b/index.html
@@ -3,128 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photography Image Slider - 20+ Photos</title>
+    <title>Image Gallery</title>
     <style>
-        /* Basic styling for the slider */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
+        /* Add your custom styles here */
+        .bwg-item {
+            margin: 10px;
+            display: inline-block;
         }
-
-        .slider-container {
-            position: relative;
+        .bwg-masonry-thumb {
             max-width: 100%;
-            margin: auto;
-            overflow: hidden;
-        }
-
-        .slides {
-            display: flex;
-            transition: transform 0.5s ease;
-        }
-
-        .slide {
-            min-width: 100%;
-            box-sizing: border-box;
-        }
-
-        img {
-            width: 100%;
             height: auto;
-        }
-
-        /* Navigation buttons */
-        .prev, .next {
-            position: absolute;
-            top: 50%;
-            padding: 16px;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            font-size: 18px;
-            border: none;
-            cursor: pointer;
-            z-index: 1;
-            border-radius: 50%;
-        }
-
-        .prev {
-            left: 10px;
-            transform: translateY(-50%);
-        }
-
-        .next {
-            right: 10px;
-            transform: translateY(-50%);
         }
     </style>
 </head>
 <body>
-
-<div class="slider-container">
-    <div class="slides">
-        <!-- 20+ Image Slides (with your image) -->
-        <div class="slide"><img src="Image/1744196121756.jpg" alt="Image 1"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/7f7fff/333333?text=Photography+Image+2" alt="Image 2"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/7fff7f/333333?text=Photography+Image+3" alt="Image 3"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ff7fff/333333?text=Photography+Image+4" alt="Image 4"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/7f7f7f/333333?text=Photography+Image+5" alt="Image 5"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ffbf7f/333333?text=Photography+Image+6" alt="Image 6"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ff7fbf/333333?text=Photography+Image+7" alt="Image 7"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ffdf7f/333333?text=Photography+Image+8" alt="Image 8"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ffff7f/333333?text=Photography+Image+9" alt="Image 9"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/7f7fff/333333?text=Photography+Image+10" alt="Image 10"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ff7f7f/333333?text=Photography+Image+11" alt="Image 11"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/7fff7f/333333?text=Photography+Image+12" alt="Image 12"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ff7fff/333333?text=Photography+Image+13" alt="Image 13"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/7f7f7f/333333?text=Photography+Image+14" alt="Image 14"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ffbf7f/333333?text=Photography+Image+15" alt="Image 15"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ff7fbf/333333?text=Photography+Image+16" alt="Image 16"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ffdf7f/333333?text=Photography+Image+17" alt="Image 17"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ffff7f/333333?text=Photography+Image+18" alt="Image 18"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/7f7fff/333333?text=Photography+Image+19" alt="Image 19"></div>
-        <div class="slide"><img src="https://via.placeholder.com/1200x600/ff7f7f/333333?text=Photography+Image+20" alt="Image 20"></div>
+    <div class="bwg-item">
+        <a class="bwg-a bwg_lightbox" 
+           data-image-id="1" 
+           href="image/1744196121756.jpg" 
+           data-elementor-open-lightbox="no">
+            <div class="bwg-item0">
+                <div class="bwg-item1">
+                    <img decoding="async"
+                         class="skip-lazy bwg-masonry-thumb bwg_masonry_thumb_0 bwg_lazyload lazy_loader"
+                         data-id="1"
+                         data-src="image/1744196121756.jpg"
+                         data-width="500"
+                         data-height="311"
+                         alt="Image Description"
+                         title="Image Title" />
+                    <div class=""></div>
+                </div>
+            </div>
+        </a>
     </div>
 
-    <!-- Navigation buttons -->
-    <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
-    <button class="next" onclick="changeSlide(1)">&#10095;</button>
-</div>
+    <div class="bwg-item">
+        <a class="bwg-a bwg_lightbox" 
+           data-image-id="2" 
+           href="image/img2.jpg" 
+           data-elementor-open-lightbox="no">
+            <div class="bwg-item0">
+                <div class="bwg-item1">
+                    <img decoding="async"
+                         class="skip-lazy bwg-masonry-thumb bwg_masonry_thumb_0 bwg_lazyload lazy_loader"
+                         data-id="2"
+                         data-src="image/img2.jpg"
+                         data-width="500"
+                         data-height="311"
+                         alt="Another Image"
+                         title="Second Image" />
+                    <div class=""></div>
+                </div>
+            </div>
+        </a>
+    </div>
 
-<script>
-    let slideIndex = 0;
+    <!-- Add more bwg-item divs as needed -->
+    
+    <script>
+        // Optional: Add lazy loading functionality
+        document.addEventListener("DOMContentLoaded", function() {
+            const lazyImages = [].slice.call(document.querySelectorAll("img.lazy_loader"));
+            
+            if ("IntersectionObserver" in window) {
+                let lazyImageObserver = new IntersectionObserver(function(entries, observer) {
+                    entries.forEach(function(entry) {
+                        if (entry.isIntersecting) {
+                            let lazyImage = entry.target;
+                            lazyImage.src = lazyImage.dataset.src;
+                            lazyImage.classList.remove("lazy_loader");
+                            lazyImageObserver.unobserve(lazyImage);
+                        }
+                    });
+                });
 
-    function showSlide(index) {
-        const slides = document.querySelectorAll('.slide');
-        const totalSlides = slides.length;
-
-        // Loop back to the first slide when reaching the end
-        if (index >= totalSlides) {
-            slideIndex = 0;
-        } else if (index < 0) {
-            slideIndex = totalSlides - 1;
-        } else {
-            slideIndex = index;
-        }
-
-        // Update the position of the slides
-        const slidesContainer = document.querySelector('.slides');
-        slidesContainer.style.transform = `translateX(-${slideIndex * 100}%)`;
-    }
-
-    function changeSlide(step) {
-        showSlide(slideIndex + step);
-    }
-
-    // Automatically change slides every 3 seconds
-    setInterval(() => {
-        changeSlide(1);
-    }, 3000);
-
-    // Initial slide
-    showSlide(slideIndex);
-</script>
-
+                lazyImages.forEach(function(lazyImage) {
+                    lazyImageObserver.observe(lazyImage);
+                });
+            }
+        });
+    </script>
 </body>
 </html>
