--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h1 style="text-align: center; padding: 20px;">Photo Gallery</h1>
 
     <div class="container">
-        <div class="gallery-item"><img src="image1.jpg" alt="Image 1"></div>
+        <div class="gallery-item"><img src="Image/1744196121756.jpg" alt="Image 1"></div>
         <div class="gallery-item"><img src="image2.jpg" alt="Image 2"></div>
         <div class="gallery-item"><img src="image3.jpg" alt="Image 3"></div>
         <div class="gallery-item"><img src="image4.jpg" alt="Image 4"></div>
