--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="header">
         <img src="vecteezy_golden-logo-eagle_27739545.png" alt="Logo"> <!-- Replace logo.png with your logo file -->
-        <h1>Photo Gallery</h1>
+        <h1>Wedding Photography</h1>
     </div>
 
     <div class="container">
