--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
             transform: scale(1.05);
             transition: transform 0.3s ease-in-out;
         }
+        .footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #fff;
+            margin-top: 20px;
+            border-top: 1px solid #ddd;
+        }
+        .footer p {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -81,5 +91,13 @@
         <div class="gallery-item"><img src="image20.jpg" alt="Image 20"></div>
     </div>
 
+    <!-- Footer Section -->
+    <div class="footer">
+        <p>Wedding Day With Mim & Rhid....</p>
+        <p>Photo By: Rifat</p>
+        <p>All Right Reserved By: Circle Bird</p>
+        <p>Contact Us: 01887-101720</p>
+    </div>
+
 </body>
-                                      </html>
+</html>
