--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="container">
-        <div class="gallery-item"><img src="Image/Image1.jgp" alt="Image 1"></div>
+        <div class="gallery-item"><img src="Image/Image1.jpg" alt="Image 1"></div>
         <div class="gallery-item"><img src="Image/image2.jpg" alt="Image 2"></div>
         <div class="gallery-item"><img src="Image/image3.jpg" alt="Image 3"></div>
         <div class="gallery-item"><img src="Image/image4.jpg" alt="Image 4"></div>
