--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         .gallery-item img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+    width: auto; /* Keeps original width */
+    height: auto; /* Keeps original height */
+    max-width: 100%; /* Prevents the image from being too wide */
+    max-height: 100%; /* Prevents the image from being too tall */
+    object-fit: contain; /* Ensures the image stays proportional */
         }
         .gallery-item:hover {
             transform: scale(1.05);
