--- a/index.html
+++ b/index.html
@@ -72,25 +72,25 @@
 
     <div class="container">
         <div class="gallery-item"><img src="Image/Image1.jpg" alt="Image 1"></div>
-        <div class="gallery-item"><img src="Image/image2.jpg" alt="Image 2"></div>
-        <div class="gallery-item"><img src="Image/image3.jpg" alt="Image 3"></div>
-        <div class="gallery-item"><img src="Image/image4.jpg" alt="Image 4"></div>
-        <div class="gallery-item"><img src="Image/image5.jpg" alt="Image 5"></div>
-        <div class="gallery-item"><img src="Image/image6.jpg" alt="Image 6"></div>
-        <div class="gallery-item"><img src="Image/image7.jpg" alt="Image 7"></div>
-        <div class="gallery-item"><img src="Image/image8.jpg" alt="Image 8"></div>
-        <div class="gallery-item"><img src="Image/image9.jpg" alt="Image 9"></div>
-        <div class="gallery-item"><img src="Image/image10.jpg" alt="Image 10"></div>
-        <div class="gallery-item"><img src="Image/image11.jpg" alt="Image 11"></div>
-        <div class="gallery-item"><img src="Image/image12.jpg" alt="Image 12"></div>
-        <div class="gallery-item"><img src="Image/image13.jpg" alt="Image 13"></div>
-        <div class="gallery-item"><img src="Image/image14.jpg" alt="Image 14"></div>
-        <div class="gallery-item"><img src="Image/image15.jpg" alt="Image 15"></div>
-        <div class="gallery-item"><img src="Image/image16.jpg" alt="Image 16"></div>
-        <div class="gallery-item"><img src="Image/image17.jpg" alt="Image 17"></div>
-        <div class="gallery-item"><img src="Image/image18.jpg" alt="Image 18"></div>
-        <div class="gallery-item"><img src="Image/image19.jpg" alt="Image 19"></div>
-        <div class="gallery-item"><img src="Image/image20.jpg" alt="Image 20"></div>
+        <div class="gallery-item"><img src="Image/Image2.jpg" alt="Image 2"></div>
+        <div class="gallery-item"><img src="Image/Image3.jpg" alt="Image 3"></div>
+        <div class="gallery-item"><img src="Image/Image4.jpg" alt="Image 4"></div>
+        <div class="gallery-item"><img src="Image/Image5.jpg" alt="Image 5"></div>
+        <div class="gallery-item"><img src="Image/Image6.jpg" alt="Image 6"></div>
+        <div class="gallery-item"><img src="Image/Image7.jpg" alt="Image 7"></div>
+        <div class="gallery-item"><img src="Image/Image8.jpg" alt="Image 8"></div>
+        <div class="gallery-item"><img src="Image/Image9.jpg" alt="Image 9"></div>
+        <div class="gallery-item"><img src="Image/Image10.jpg" alt="Image 10"></div>
+        <div class="gallery-item"><img src="Image/Image11.jpg" alt="Image 11"></div>
+        <div class="gallery-item"><img src="Image/Image12.jpg" alt="Image 12"></div>
+        <div class="gallery-item"><img src="Image/Image13.jpg" alt="Image 13"></div>
+        <div class="gallery-item"><img src="Image/Image14.jpg" alt="Image 14"></div>
+        <div class="gallery-item"><img src="Image/Image15.jpg" alt="Image 15"></div>
+        <div class="gallery-item"><img src="Image/Image16.jpg" alt="Image 16"></div>
+        <div class="gallery-item"><img src="Image/Image17.jpg" alt="Image 17"></div>
+        <div class="gallery-item"><img src="Image/Image18.jpg" alt="Image 18"></div>
+        <div class="gallery-item"><img src="Image/Image19.jpg" alt="Image 19"></div>
+        <div class="gallery-item"><img src="Image/Image20.jpg" alt="Image 20"></div>
     </div>
 
     <!-- Footer Section -->
